<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Menu</string>
    <string name="likes">Likes</string>
    <string name="shares">Shares</string>
    <string name="views">Views</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="content">Write something here...</string>
    <string name="error_empty_post">Text is empty!</string>
    <string name="edit_header">Edit Message</string>
</resources>